<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lazyplant.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.lazyplant.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_plant_details"
            app:destination="@id/navigation_plant_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_plant_details"
        android:name="com.example.lazyplant.ui.plantDetails.PlantDetailsFragment"
        android:label="@string/title_activity_plant_details"
        tools:layout="@layout/fragment_plant_details" />
    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.lazyplant.ui.search.SearchFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_browse_to_navigation_plant_details"
            app:destination="@id/navigation_plant_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.lazyplant.ui.search.NameSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_name_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_plant_details"
            app:destination="@id/navigation_plant_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.example.lazyplant.ui.reminder.ReminderFragment"
        android:label="@string/title_reminder"
        tools:layout="@layout/fragment_reminder" />

</navigation>